--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,9 +14,10 @@
     <title>Rohana</title>
   </head>
   <body>
-    <h1>Hello World!</h1>
-    We are using Node.js <span id="node-version"></span>, Chromium
-    <span id="chrome-version"></span>, and Electron
-    <span id="electron-version"></span>.
+    <h1>Rohana</h1>
+    <p>Make sure rohana has access to the files.</p>
+    <input id="search-input" />
+    <button id="search-button">search</button>
+    <p id="file-list"></p>
   </body>
 </html>
