--- a/src/html/index.html
+++ b/src/html/index.html
@@ -18,6 +18,8 @@
     <p>Make sure rohana has access to the files.</p>
     <input id="search-input" />
     <button id="search-button">search</button>
+    <button id="open-button">open</button>
     <p id="file-list"></p>
+    <script src="../render.js"></script>
   </body>
 </html>
