--- a/src/html/index.html
+++ b/src/html/index.html
@@ -19,7 +19,10 @@
     <input id="search-input" />
     <button id="search-button">search</button>
     <button id="open-button">open</button>
-    <p id="file-list"></p>
+    <p id="file-list">
+      <span id="cur-dir-text"></span>
+    </p>
+    <div id="container"></div>
     <script src="../render.js"></script>
   </body>
 </html>
