--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,15 +14,7 @@
     <title>Rohana</title>
   </head>
   <body>
-    <h1>Rohana</h1>
-    <p>Make sure rohana has access to the files.</p>
-    <input id="search-input" />
-    <button id="search-button">search</button>
-    <button id="open-button">open</button>
-    <p id="file-list">
-      <span id="cur-dir-text"></span>
-    </p>
-    <div id="container"></div>
+    <div id="main"></div>
     <script src="../render.js"></script>
   </body>
 </html>
