--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,6 +15,6 @@
   </head>
   <body>
     <div id="main"></div>
-    <script src="../render.js"></script>
+    <script src="../renders/render.js"></script>
   </body>
 </html>
